# Wether

./: CMakeLists.txt  LICENSE  README.md  resources.qrc
projet/: CMakeLists.txt  resources.qrc
projet/inc/: forecastday.h  forecastmodel.h  weatherAPI.h  weatherdata.h
projet/qml/: CurrentWeather.qml  Forecast.qml  SearchScreen.qml  main.qml
projet/src/: forecastday.cpp  forecastmodel.cpp  main.cpp  weatherAPI.cpp  weatherdata.cpp
